# anime-girls-holding-programming-books-cli

./: .pre-commit-config.yaml  pyproject.toml
aghpbc/: __main__.py
