[tool.poetry]
name = "aghpbc"
version = "0.1.0"
description = "A CLI for https://github.com/cat-milk/Anime-Girls-Holding-Programming-Books"
authors = ["Sourajyoti Basak <wiz28@protonmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.21.3"
rich = "^11.0.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
black = "^21.12b0"
isort = "^5.10.1"
codespell = "^2.1.0"
pyupgrade = "^2.31.0"
mypy = "^0.931"

[tool.poetry.scripts]
aghpbc = "aghpbc.__main__:main"

[tool.isort]
profile = "black"
py_version = 38
balanced_wrapping = true
combine_as_imports = true
combine_star = true

[tool.mypy]
ignore_missing_imports = true
strict = true
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
